# GPUCrack

./: .gitignore  CMakeLists.txt  README.md  clean.sh  install.sh
doc/: file_hierarchy.md
src/common/: filtration.c  filtration.h  filtration2.cu  filtration2.cuh  filtrationHT.cu  filtrationHT.cuh  online.c  online.cpp  online.h  reduction.c  reduction.h
src/common/reduction/: reduction.c  reduction.cpp  reduction.h
src/common/test/: filtrationTest.c  filtrationTest.h  tableCoverageTest.c  tableCoverageTest.h
src/gpu/: CMakeLists.txt  LICENSE  README.md  a.out  benchmark.cu  chain.cu  chains.cu  chains.cuh  chainsOld.cu  chainsOld.cuh  chainsV2.cu  chainsV2.cuh  commons.cu  commons.cuh  constants.cuh  md5.cu  md5.cuh  myMd5.cu  myMd5.cuh  ntlm.cu  ntlm.cuh  para  parahash.cu  parallelized_hash.cu  parallelized_hash.cuh  rainbow.cu  rainbow.cuh  test_hash.cu  test_hash.cuh
src/gpu/hash/: CMakeLists.txt  README.md  benchmark.cu  commons.cu  commons.cuh  hash.cu  hash.cuh  parallelized_hash.cu  parallelized_hash.cuh  test_hash.cu  test_hash.cuh
src/gpu/hash/hash_functions/: classicMd5.cu  classicMd5.cuh  cudaMd5.cu  cudaMd5.cuh  ntlm.cu  ntlm.cuh
src/gpu/hash/test/: benchmarkTest.cu  benchmarkTest.cuh  collisionTest.cu  complianceTest.cu  complianceTest.cuh  doubloonTest.cu  doubloonTest.cuh  generalTest.cu  generalTest.cuh  hashBenchmarkTest.cu  hashBenchmarkTest.cuh  hashComplianceTest.cu  hashComplianceTest.cuh  hashGeneralTest.cu  hashGeneralTest.cuh
src/gpu/hash_functions/: classicMd5.cuh  cudaMd5.cu  ntlm.cu  ntlm.cuh
src/gpu/reduction/: reduction.cu  reduction.cuh  reduction_cuda.cu  reduction_cuda.cuh
src/gpu/reduction/test/: reductionTest.cu  reductionTest.cuh
src/gpu/test/: chainBenchmarkTest.cu  chainBenchmarkTest.cuh  chainBenchmarkThreadTest.cu  chainBenchmarkThreadTest.cuh  chainCoverageTest.cu  chainCoverageTest.cuh  chainTest.cu  chainTest.cuh  chainTotalCoverageTest.cu  chainTotalCoverageTest.cuh  chainsComplianceTest.cu  chainsComplianceTest.cuh  generateTableTest.cu  generateTableTest.cuh  mpiGenerateTableTest.cu  mpiGenerateTableTest.cuh
test/: test_reduction.c
